Fix: fixed the text visibility in light mode and some text styles

--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -368,7 +368,7 @@
 .load-popup {
 	width: 70%;
 	height: 80vh;
-	z-index: 2;
+	z-index: 3;
 	top: 50%;
 	left: 50%;
 	translate: -50% -50%;
