--- a/src/Pages/Service/style.css
+++ b/src/Pages/Service/style.css
@@ -22,7 +22,7 @@
 }
 
 .service-main-cnt > div:first-child {
-	font-size: 3rem;
+	font-size: 2.8rem;
 }
 
 .service-main-cnt > div:nth-child(2) {
